# scwrypts

./: .config  .env.template  .env.template.descriptions  .gitattributes  .gitignore  .template.env  Dockerfile  README.md  action.yaml  run  scwrypts  scwrypts.plugin.zsh  scwrypts.scwrypts.zsh
py/: .gitignore  (+3 more)
py/lib/: .gitignore  README.md  __init__.py  pyproject.toml
py/lib/data/: __init__.py  converter.py  io.py
py/lib/fzf/: __init__.py
py/lib/http/: __init__.py  client.py
py/lib/http/directus/: __init__.py  client.py  constant.py
py/lib/http/discord/: __init__.py  client.py  send_message.py
py/lib/http/linear/: __init__.py  client.py
py/lib/linear/: __init__.py  client.py
py/lib/redis/: __init__.py  client.py
py/lib/scwrypts/: __init__.py  env.py  exceptions.py  execute.py  getenv.py  interactive.py  io.py  run.py
py/lib/scwrypts/data/: converter.py  test_converter.py
py/lib/scwrypts/fzf/: __init__.py  client.py
py/lib/scwrypts/http/: __init__.py  client.py  conftest.py  test_client.py
py/lib/scwrypts/http/directus/: __init__.py  client.py  collections.py  conftest.py  fields.py  graphql.py  test_client.py  test_graphql.py
py/lib/scwrypts/io/: __init__.py  combined_io_stream.py
py/lib/scwrypts/redis/: client.py
py/lib/scwrypts/scwrypts/: __init__.py  exceptions.py  execute.py  interactive.py  scwrypts.py  test_scwrypts.py
py/lib/scwrypts/test/: __init__.py  character_set.py  exceptions.py  generate.py  test_generate.py
py/lib/scwrypts/twilio/: __init__.py  client.py  send_sms.py
py/lib/twilio/: __init__.py  client.py  send_sms.py
(+436 files in other folders)
